Fri Jan  5 11:03:17 1996  Steve Haflich  <smh@vapor>

	* eli/Makefile:	Removed ore hosts from rdist rule.

	* eli/fi-emacs19.el:
	* eli/fi-xemacs.el:
	  Removed connected-to-epoch-p conditionalizations.  The menu item availability
	  code is still flawed and needs rewriting.

	* eli/fi-lep.el:
	  ensure-translated-pathname renamed fi::ensure-translated-pathname

	* eli/fi-site-init.el: Bump version number to 2.0.19.


Wed Nov 15 13:47:00 1995  Steve Haflich  <smh@vapor>

	* Makefile:
	Compile local-fi-developer-hooks.el if it exists.
	Add local-fi-developer-hooks.el to rdist.
	Remove host hyper from the rdist.

	* fi-site-init.el:
	Load local-fi-developer-hooks.elc if it exists.

	* local-fi-developer-hooks.el:
	New file.  Contains only local-write-file-hooks for common-lisp and c
	mode buffers to do some automatic source-file id tagging.
	This file is not distributed and is ignored by the Makefile if absent.

Sun Mar 19 13:49:48 1995  George Jacob  <georgej@vapor>

	* fi-clman.el (math): Allow uppercase symbols to work (spr10564)

	* Makefile (rdist): Added Doc.el to list of distributable files

	* Doc.el: Added description at beginning of file

Mon Feb 27 13:14:15 1995  Steve Haflich  <smh@vapor>

	* clman.c (main): Still some more byte-order conversions needed.

Fri Feb 24 13:58:36 1995  Steve Haflich  <smh@vapor>

	* fi-stream.el:
	Call fi::ensure-buffer-visible when a listener stream is created.

Thu Feb 16 13:24:15 1995  Steve Haflich  <smh@vapor>

	* fi-lep.el
	fi::lisp-macroexpand-common needs to defontify buffer-subtring
	in Emacs 19.2x.

*******************************************************************************
2.0.18 public release
*******************************************************************************

Tue Jan 31 11:55:02 1995  Steve Haflich  <smh@vapor>

	* fi-clman.el
	Protect against bogus process return code in old copies of Nemacs.

*******************************************************************************
2.0.17 public release