@@ -1,3 +1,8 @@
+Mon Mar 25 15:36:35 1996  Steve Haflich  <smh@vapor>
+
+	* Makefile: Updated the rdist list.
+	* fi-indent.el:  Added property for def-tr.
+
 Fri Jan  5 11:03:17 1996  Steve Haflich  <smh@vapor>
 
 	* eli/Makefile:	Removed ore hosts from rdist rule.
